--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0;
+    padding: 0;
 }
 
 .action-btn {
@@ -69,8 +71,7 @@ body{
 
 .music-info{
     background-color: rgb(255, 255, 255);
-    border-radius: 15px 15px 0 0;
-    box-shadow: 0 -4px 0 0 rgba(252, 241, 93, 0.6);
+    border-radius: 0px 0px 15px 15px;
     position: absolute;
     top: 0;
     left: 20px;
@@ -87,7 +88,7 @@ body{
 
 .music-container.play .music-info{
     opacity: 1;
-    transform: translateY(-100%);
+    transform: translateY(110%);
 }
 
 #titulo{
@@ -108,5 +109,56 @@ body{
     background-color: rgb(225, 238, 41);
     height: 100%;
     width: 0;
+    transition: width 0.1 linear;
+}
+
+#volumeInput{
+   cursor: pointer;
+   height: 10px;
+   width: 50px;
+   position: relative;
+   top: -2.7vh;
+   left: 3.8vh;
+   opacity: 0;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    input[type='range'] {
+      overflow: hidden;
+      width: 80px;
+      -webkit-appearance: none;
+      background-color: #000000;
+      border-radius: 10px;
+      height: 15px;
+    }
+
+    input[type='range']::-webkit-slider-runnable-track {
+      height: 8px;
+      -webkit-appearance: none;
+      color: rgb(225, 238, 41);
+      border-radius: none;
+    }
+
+    input[type='range']::-webkit-slider-thumb {
+      width: 8px;
+      justify-content: center;
+      -webkit-appearance: none;
+      height: 8px;
+      cursor: pointer;
+      background: #464646;
+      border-radius: 50%;
+      box-shadow: -80px 0 0 80px rgb(225, 238, 41);
+    }
+
+}
+
+.navigation.volumen #volumeInput{
+    opacity: 1;
+ }
+
+.volume-progress{
+    background-color: rgb(225, 238, 41);
+    width: 100%;
+    height: 0;
     transition: width 0.1 linear;
 }
